--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.20.1",
+    "uid": "^2.0.2",
     "yup": "^1.3.2"
   },
   "devDependencies": {
